# rust_nosql_db

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  database.db  database.json  test_db.json
src/: lib.rs  main.rs
src/core/: database.rs  mod.rs  value.rs  write_cache.rs
src/error/: database_error.rs  mod.rs
src/storage/: persistence.rs
src/transactions/: transaction.rs
tests/: database_tests.rs  integration_tests.rs  test_utils.rs
tests/core/: database_tests.rs  mod.rs
tests/storage/: mod.rs  persistence_tests.rs
tests/transactions/: transaction_tests.rs
