[package]
name = "nosql_db"
version = "0.1.0"
edition = "2021"

[lib]
name = "nosql_db"
path = "src/lib.rs"

[[bin]]
name = "nosql_db"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.2"
